CRUD From Services

--- a/SampleMVC/appsettings.json
+++ b/SampleMVC/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnectionString": "Data Source=ACTUAL;Initial Catalog=LatihanDb;Integrated Security=True;TrustServerCertificate=True;"
-  }
+    "MyDbConnectionString": "Data Source=BSINB23L004\\BSISQLEXPRESS;Initial Catalog=LatihanDb1;Integrated Security=True;TrustServerCertificate=True;"
+  },
+  "BaseUrl": "http://localhost:5272/api/v1"
 }
