--- a/MyWebFormApp.Web/Web.config
+++ b/MyWebFormApp.Web/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-	  <add name="MyDbConnectionString" connectionString="Data Source=ACTUAL;Initial Catalog=LatihanDb;Integrated Security=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+	  <add name="MyDbConnectionString" connectionString="Data Source=BSINB23L004\\BSISQLEXPRESS;Initial Catalog=LatihanDb;Integrated Security=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
 	
