--- a/MyRESTServices/appsettings.json
+++ b/MyRESTServices/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MyDbConnectionString": "Data Source=BSINB23L004\\BSISQLEXPRESS;Initial Catalog=LatihanDb1;Integrated Security=True;TrustServerCertificate=True;"
+  },
+  "AppSetting": {
+    "Secret": "Halo selamat pagi kuucapkan salam rindu padamu hari ini, bagaimana kabarmu disana?"
   }
 }
